ISPN-1517 Shutdown stale transaction service when tx table stops
Also sorted out an issue with log4j settings that were provided
externally because they were being ignored.